kubernetes/apps/mlflow/mlflow-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
