kubernetes/apps/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      annotations:
        checksum/config: 6ebe9b69c4b282e9b85c8f61ad679abd0587c07259bf3bee4b9181cd21b02be0
      labels:
        app: mlflow
    spec:
      serviceAccountName: mlflow
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: mlflow
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
          image: "burakince/mlflow:3.7.0"
          imagePullPolicy: IfNotPresent
          command: ["mlflow"]
          args:
            - server
            - --host=0.0.0.0
            - --port=5000
            - --backend-store-uri=postgresql://
            - --default-artifact-root=./mlruns
            - --app-name=basic-auth
            - --gunicorn-opts='--log-level=info'
          ports:
            - name: mlflow
              containerPort: 5000
              protocol: TCP
          resources:
            {}
          volumeMounts:
            - name: ini-file
              mountPath: /etc/mlflow/auth/basic_auth.ini
              subPath: auth_result.ini
              readOnly: true
      volumes:
        - name: ini-file
          emptyDir: {}
        - name: auth-ini-template-file
          configMap:
            name: mlflow-auth-ini-template
