kubernetes/apps/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: mlflow
      protocol: TCP
      name: http
  selector:
    app: mlflow
