kubernetes/apps/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  labels:
    app: mlflow
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
    cloudflare-tunnel-ingress-controller.strrl.dev/proxy-ssl-verify: "on"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: "mlflow.icantkube.help"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 80
